--- a/css-compiled/dark.css
+++ b/css-compiled/dark.css
@@ -604,9 +604,20 @@ img {
   color: #fff;
   background-color: #121111; }
 
+.header-links > li > a {
+  text-decoration: none; }
+
+.no-text-decoration {
+  text-decoration: none; }
+
+.tag-cloud {
+  font-size: 135%;
+  padding: 25px; }
+
 .footer {
   display: block;
   padding-top: 35px;
+  margin-top: 35px;
   margin-bottom: 85px;
   border-top: 1px solid #393636; }
   .footer p {
@@ -937,7 +948,7 @@ img {
 
 .header-logo {
   display: inline-block;
-  font-family: 'cormorant garamond', Courier, serif;
+  font-family: "Cormorant Garamond", Courier, serif;
   font-size: 36px;
   font-weight: 700;
   color: #fff;
@@ -987,7 +998,7 @@ img {
   .highlight pre {
     margin: 0; }
 
-.highlighter-rouge {
+code {
   padding: 2px 4px;
   font-size: 14px;
   color: #f92672;
