--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -5,6 +5,7 @@
 .footer {
   display: block;
   padding-top: 35px;
+  margin-top: 35px;
   margin-bottom: 85px;
   border-top: 1px solid $base-border-color;
   p {
