--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -248,8 +248,6 @@
     {% endif %}
   </ul>
    <p>
-    Chalk is a high quality, completely customizable, performant and 100% free
-    blog template for Jekyll built by
-    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
+   {{ theme_config.footer_text }}
   </p>
 </footer>
