--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -46,7 +46,7 @@ $article-paginator-color-hover: $gray-lightest;
 
 // Vendors
 
-@import "vendor/normalize";
+@import "vendor/_normalize";
 @import "vendor/_fluidbox.scss";
 
 // Settings
