--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -230,6 +230,8 @@
     {% if theme_config.social_discord %}
       <li>
         <a href="https://discord.gg/{{ theme_config.social_discord }}" rel="noreferrer noopener" target="_blank" title="Discord Server">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-discord">
+            <use href="{{url('theme://templates/icons/discord.svg')}}#icon-discord" xlink:href="{{url('theme://templates/icons/discord.svg')}}#icon-discord">
           {% include 'icons/discord.svg' %}
         </a>
       </li>
@@ -237,6 +239,8 @@
     {% if theme_config.social_bitcoin %}
       <li>
         <a href="https://blockexplorer.com/address/{{ theme_config.social_bitcoin }}" rel="noreferrer noopener" target="_blank" title="Bitcoin">
+             <svg xmlns="http://www.w3.org/2000/svg" class="icon-bitcoin">
+            <use href="{{url('theme://templates/icons/bitcoin.svg')}}#icon-bitcoin" xlink:href="{{url('theme://templates/icons/bitcoin.svg')}}#icon-bitcoin">
           {% include 'icons/bitcoin.svg' %}
         </a>
       </li>
@@ -244,6 +248,8 @@
     {% if theme_config.social_ethereum %}
       <li>
         <a href="https://etherscan.io/address/{{ theme_config.social_ethereum }}" rel="noreferrer noopener" target="_blank" title="Ethereum">
+             <svg xmlns="http://www.w3.org/2000/svg" class="icon-ethereum">
+            <use href="{{url('theme://templates/icons/ethereum.svg')}}#icon-ethereum" xlink:href="{{url('theme://templates/icons/ethereum.svg')}}#icon-ethereum">
           {% include 'icons/ethereum.svg' %}
         </a>
       </li>
@@ -251,6 +257,8 @@
     {% if theme_config.social_email %}
       <li>
         <a href="mailto:{{ theme_config.social_email }}" title="Email">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-email">
+            <use href="{{url('theme://templates/icons/email.svg')}}#icon-email" xlink:href="{{url('theme://templates/icons/email.svg')}}#icon-email">
           {% include 'icons/email.svg' %}
         </a>
       </li>
@@ -258,6 +266,8 @@
     {% if theme_config.rss_enabled == true %}
       <li>
         <a href="{{ 'feed.xml' | relative_url }}" rel="noreferrer noopener" target="_blank" title="RSS">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-rss">
+            <use href="{{url('theme://templates/icons/rss.svg')}}#icon-rss" xlink:href="{{url('theme://templates/icons/rss.svg')}}#icon-rss">
           {% include 'icons/rss.svg' %}
         </a>
       </li>
