--- a/templates/blog_listing.html.twig
+++ b/templates/blog_listing.html.twig
@@ -22,7 +22,7 @@
                         <span class="article-list-divider">-</span>
                         <div class="article-list-tags">
                             {% for tag in article.taxonomy.tag %}
-                        <a href="/tag/web">{{ tag }}</a>
+                        <a href="{{ base_url }}{{config.plugins.taxonomylist.route }}/{{ 'tag' }}{{ config.system.param_sep }}{{ tag }}">{{ tag }}</a>
                         {% endfor %}
                        
                         </div>
