--- a/templates/blog_listing.html.twig
+++ b/templates/blog_listing.html.twig
@@ -23,7 +23,7 @@
                         </a>
                         <div class="article-list-tags">
                             {% for tag in article.taxonomy.tag %}
-                        <a href="{{ base_url }}{{config.plugins.taxonomylist.route }}/{{ 'tag' }}{{ config.system.param_sep }}{{ tag }}">{{ tag }}</a>
+                        <a href="/tag/web">{{ tag }}</a>
                         {% endfor %}
                         </div>
                     </div>
