--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -1,12 +1,12 @@
 <nav class="header-nav {% if theme_config.scrollappear_enabled %}scrollappear{% endif %}">
-  <a href="{{ home_url }}" class="header-logo" title="{{ site.title }}">{{ site.title }}</a>
+  <a href="{{ home_url }}" class="header-logo" title="{{ site.title }}" {% if theme_config.header_font == "cormorant" %} style="font-family: 'Cormorant Garamond', Courier, serif;"{% endif %}>{{ site.title }}</a>
   <ul class="header-links">
 
     {% for p in pages.children.visible %}
         {% set active_page = (p.active or p.activeChild) ? 'active' : '' %}
             <li>
-              
-              
+
+
                 <a href="{{ p.url }}" class="{{ active_page }}">
                    {% if p.header.iconmenu %}
               <i class="fa {{p.header.iconmenu }}"></i>
@@ -38,7 +38,7 @@
     </svg>
         </a>
       </li>
-     
+
     {% endif %}
     {% if theme_config.social_facebook %}
       <li>
