include pagination links
Although the pagination is supported for the theme the code that displays the pagination controls is missing.
Please check if my code is correct (even though it works for me) as I'm barely familiar with PHP.

--- a/templates/blog_listing.html.twig
+++ b/templates/blog_listing.html.twig
@@ -35,6 +35,9 @@
                </li>
                {% endfor %}
                </ul>
+               {% if config.plugins.pagination.enabled and page.collection.params.pagination %}
+                    {% include 'partials/pagination.html.twig' with {'base_url':page.url, 'pagination':page.collection.params.pagination} %}
+               {% endif %}
 {% include 'partials/footer.html.twig' %}
 
     </div>
