--- a/templates/tags.html.twig
+++ b/templates/tags.html.twig
@@ -6,7 +6,7 @@
         {% include 'partials/navigation.html.twig' %}
           <section id="body">
             <div class="wrapper padding">
-                <h1 style="text-align: center;padding-top:100px; padding-bottom:80px;"><i class="fa fa-hashtag"></i>tags</h1>
+                <h1 style="text-align: center;padding-top:100px; padding-bottom:80px;"><i class="fa fa-hashtag"></i>{{ page.title }}</h1>
                {{ page.content }}
                {% include 'partials/taxonomylist.html.twig' with {route_url: my_url, taxonomy: 'tag'} %}
 
@@ -17,7 +17,5 @@
 
     </div>
 </div>
-  
+
 {% endblock %}
-
-
