Fix issue with theme not render correctly, using raw to render html correctly

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -6,7 +6,7 @@
         {% include 'partials/navigation.html.twig' %}
           <section id="body">
             <div class="wrapper padding">
-               {{ page.content }}
+               {{ page.content | raw }}
             </div>
           </section>
 
