--- a/templates/tags.html.twig
+++ b/templates/tags.html.twig
@@ -7,7 +7,7 @@
           <section id="body">
             <div class="wrapper padding">
                 <h1 style="text-align: center;padding-top:100px; padding-bottom:80px;"><i class="fa fa-hashtag"></i>tags</h1>
-               {{ page.content }}
+               {{ page.content | raw }}
                {% include 'partials/taxonomylist.html.twig' with {route_url: my_url, taxonomy: 'tag'} %}
 
             </div>
