--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -26,7 +26,7 @@
           </header>
 
           <div class="article-content">
-            {{ content }}
+            {{ content | raw }}
           </div>
           <div class="article-share">
             
