Updated Youtube Social Link

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -182,7 +182,7 @@
     {% endif %}
     {% if theme_config.social_youtube %}
       <li>
-        <a href="https://www.youtube.com/user/{{ theme_config.social_youtube }}" rel="noreferrer noopener" target="_blank" title="Youtube">
+        <a href="https://www.youtube.com/{{ theme_config.social_youtube }}" rel="noreferrer noopener" target="_blank" title="Youtube">
            <svg xmlns="http://www.w3.org/2000/svg" class="icon-youtube">
   <use href="{{url('theme://templates/icons/youtube.svg')}}#icon-youtube" xlink:href="{{url('theme://templates/icons/youtube.svg')}}#icon-youtube">
           {% include 'icons/youtube.svg' %}
