Added missing arrow. Various css fixes

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -163,3 +163,26 @@ img {
   font-size:135%;
   padding:25px;
 }
+.taxonomylist{
+  font-size:12px;
+  padding-top: 12px;
+}
+
+.hoverarrow {
+    position: relative;
+    display: inline-block;
+}
+
+.hoverarrow .arrow {
+    position: absolute;
+    right: -20px; /* Ajustez cette valeur selon vos besoins */
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease, right 0.3s ease;
+}
+
+.hoverarrow:hover .arrow {
+    opacity: 1;
+    right: -25px; /* Légère animation de la flèche vers la droite */
+}
