--- a/templates/blog_listing.html.twig
+++ b/templates/blog_listing.html.twig
@@ -10,8 +10,11 @@
 		{% for article in collection %}
 			<li class="article-list-item {% if theme_config.scrollappear_enabled %}scrollappear{% endif %}">
 				<a href="{{ article.url }}" title="{{ article.title }}">
-					<h4>{{ article.title }}</h4>
-					<h5>{{ article.header.headline }}</h5>
+					<h5 class="hoverarrow">{{ article.title }}
+						<span class="arrow">→</span>
+					</h5>
+
+					<p>{{ article.header.headline }}</p>
 					<div class="article-list-footer">
 						<span class="article-list-date">
 							{{ article.date|date('d-m-Y') }}
@@ -20,14 +23,15 @@
 						<span class="article-list-minutes">
 							{{ article.content|readingtime }}
 						</span>
-						{% if article.taxonomy %}
-							<span class="article-list-divider">-</span>
-						{% endif %}
+
 					</div>
 				</a>
 				<div class="article-list-tags">
 					{% for tag in article.taxonomy.tag %}
-						<a href="{{ base_url }}{{ config.plugins.taxonomylist.route }}/{{ 'tag' }}{{ config.system.param_sep }}{{ tag }}">{{ tag }}</a>
+
+						<a href="{{ base_url }}{{ config.plugins.taxonomylist.route }}/{{ 'tag' }}{{ config.system.param_sep }}{{ tag }}" class="taxonomylist">{{ tag|upper }}
+						</a>
+
 					{% endfor %}
 				</div>
 				{% if theme_config.summary_enabled == "on" %}
