--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -332,7 +332,7 @@
 		{% endif %}
 		{% if theme_config.social_spotify %}
 			<li>
-				<a href="https://play.spotify.com/user/{{ theme_config.social_spotify }}" rel="noreferrer noopener" target="_blank" title="Spotify">
+				<a href="https://open.spotify.com/{{ theme_config.social_spotify }}" rel="noreferrer noopener" target="_blank" title="Spotify">
 					<svg xmlns="http://www.w3.org/2000/svg" class="icon-spotify">
 						<use href="{{url('theme://templates/icons/spotify.svg')}}#icon-spotify" xlink:href="{{url('theme://templates/icons/spotify.svg')}}#icon-spotify">
 							{% include 'icons/spotify.svg' %}
