--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -367,7 +367,7 @@
 		
 		{% if theme_config.social_imdb %}
 			<li>
-				<a href="https://www.imdb.com/{{ theme_config.social_soundcloud }}" rel="noreferrer noopener" target="_blank" title="IMDB">
+				<a href="https://www.imdb.com/{{ theme_config.social_imdb }}" rel="noreferrer noopener" target="_blank" title="IMDB">
 					<svg xmlns="http://www.w3.org/2000/svg" class="icon-imdb">
 						<use href="{{url('theme://templates/icons/imdb.svg')}}#icon-imdb" xlink:href="{{url('theme://templates/icons/imdb.svg')}}#icon-imdb"></use>
 
